--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h1>TEST!</h1>
+<!DOCTYPE HTML>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial">
+
+        <!--================ REMIXICONS =======================-->
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css" rel="stylesheet">
+
+        <!--================ CSS =======================-->
+        <link rel="stylesheet" href="assets/css/styles.css">
+
+        <title> Animated login form - bedimcode</title>
+    </head>
+    <body>
+        <div class="login">
+            <img src="assets/img/login-bg.png" alt="login image" class="login__img">
+        </div>>
+
+        <!--================ MAIN JS =======================-->
+        <script src="assets/js/main.js"></script>
+    </body>
+</html>
