--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--================ REMIXICONS =======================-->
         <link href="https://cdn.jsdelivr.net/npm/remixicon@3.6.0/fonts/remixicon.css" rel="stylesheet">
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="login">
-            <img src="assets/img/login-bg.png" alt="login image" class="login__img">
+            <img src="assets/img/login-bg.jpg" alt="login image" class="login__img">
         </div>>
 
         <!--================ MAIN JS =======================-->
