--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="login">
             <img src="assets/img/login-bg.jpg" alt="login image" class="login__img">
-        </div>>
+        </div>
 
         <!--================ MAIN JS =======================-->
         <script src="assets/js/main.js"></script>
