Adjusted Projects tab, and added new sortingpage
Adjusted the projects tab to how act as a hyperlink and go to a new html page so that I can show sorting algos.

--- a/Projects.html
+++ b/Projects.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <div class="login">
-        <form action="" class="login__form" id="loginForm">
+        <a href="Projects/Sorting_Page/Sorting_Page.html" class="login__form">
             <div class="sorting-container">
                 <div class="Sorting__algos">
                     Sorting Algorithms<br>
@@ -39,7 +39,7 @@
                     <img src="algorithm_image.jpg">
                 </div>
             </div>
-        </form>
+        </a>
     </div>
 </body>
 </html>
