--- a/Projects/Sorting_Page/Sorting_Page.html
+++ b/Projects/Sorting_Page/Sorting_Page.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Bubble Sort Visualization</title>
 </head>
 <body>
-
+<div id="visualization-container"></div>
+<script src="js/main.js"></script>
 </body>
 </html>
