--- a/Projects/Sorting_Page/Sorting_Page.html
+++ b/Projects/Sorting_Page/Sorting_Page.html
@@ -11,16 +11,17 @@
 <div class="container">
     <div class="bars_container" id="bars_container"></div>
 
-    <div class="buttons_container">
-        <!-- <label for="slider">Array Size:</label> -->
-        <input
-                type="range"
-                id="slider"
-                min="50"
-                max="130"
-                step="5"
-                value="50"
-        />
+    <input
+            type="range"
+            id="slider"
+            min="50"
+            max="130"
+            step="5"
+            value="50"
+            style="
+        --slider-color: #FF1879;
+    "
+    />
 
         <select name="" id="algo">
             <option value="bubble">Bubble Sort</option>
