Adjustment to add text to sliders
Adding text to sliders to help clarify what they each do.

--- a/Projects/Sorting_Page/Sorting_Page.html
+++ b/Projects/Sorting_Page/Sorting_Page.html
@@ -13,6 +13,10 @@
     <header class="header">
         <p class="nav-heading">Sorting Visualizer</p>
         <div class="buttons_container">
+            <div class="slider_text">
+                <p>Size of array: </p>
+                <p>Speed of algo: </p>
+            </div>
             <div class="sliders_container">
                 <input
                         type="range"
