Added Guess my song

--- a/Projects.html
+++ b/Projects.html
@@ -40,6 +40,26 @@
                 </div>
             </div>
         </a>
+        <a href="Projects/guessthesong/guessthesong.html" class="login__form">
+            <div class="sorting-container">
+                <div class="Sorting__algos">
+                    Guess The Song<br>
+                </div>
+                <div class="separator-vertical"></div>
+                <div class="Sorting__description">
+                    These sorting algorithms employ diverse strategies to organize elements.
+                    Merge Sort recursively divides the array, sorts sub-parts, and merges them.
+                    Quick Sort uses a pivot to efficiently partition and sort sub-arrays.
+                    Heap Sort builds a binary heap, extracting extreme elements for sorting.
+                    Bubble Sort iteratively compares and swaps adjacent elements.
+                    Despite differences, each algorithm offers unique trade-offs in terms of simplicity, efficiency, and suitability for varying dataset sizes.
+                </div>
+                <div class="separator-vertical"></div>
+                <div class="Sorting__picture">
+                    <img src="algorithm_image.jpg">
+                </div>
+            </div>
+        </a>
     </div>
 </body>
 </html>
