--- a/Projects/guessthesong/guessthesong.html
+++ b/Projects/guessthesong/guessthesong.html
@@ -40,11 +40,11 @@
 
         async function playRandomSongFromPlaylist() {
             const playlistURI = '6hO1mHhLjoI3ukhNB5bOMD'; // Replace with your playlist URI
-            
+
             try {
                 // Get the access token
                 const accessToken = await getAccessToken();
-                
+
                 // Make a request to Spotify API to get the playlist details
                 const response = await fetch(`https://api.spotify.com/v1/playlists/${playlistURI}/tracks?limit=50`, {
                     headers: {
@@ -66,6 +66,22 @@
                     audioPlayer.controls = true;
                     audioPlayer.src = previewUrl;
 
+                    let isPlaying = false;
+                    let timeinbetween = 1000;
+
+                    // Add event listener to play/pause the audio
+                    audioPlayer.addEventListener('play', function() {
+                        if (!isPlaying) {
+                            // Start playing the audio
+                            setTimeout(function() {
+                                audioPlayer.pause();
+                                isPlaying = false;
+                            }, timeinbetween); // Pause after 1 second
+                            timeinbetween += 3000;
+                            isPlaying = true;
+                        }
+                    });
+
                     document.getElementById('song-preview').innerHTML = '';
                     document.getElementById('song-preview').appendChild(audioPlayer);
                 } else {
@@ -76,6 +92,7 @@
                 document.getElementById('song-preview').innerHTML = 'Error fetching the playlist.';
             }
         }
+
 
         // Call the function when the page loads
         window.onload = playRandomSongFromPlaylist;
