--- a/Projects/guessthesong/guessthesong.html
+++ b/Projects/guessthesong/guessthesong.html
@@ -84,6 +84,16 @@
             <button class="submitBtn" id="submitButton" onclick="submit(document.getElementById('guess').value)">SUBMIT</button>
         </div>
     </div>
+
+    <div class="winningScreen" id="winningScreen">
+        <div class="winningScreen-inner">
+            <h2>Congratulations you won!</h2>
+            <b class="playAgain">Play again?</b>
+        </div>
+    </div>
+
+    <canvas id="my-canvas"></canvas>
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="js/main.js"></script>
 </body>
