Fixed some TODOs
Update timer as the song continues to go, play button just plays music, skip button increases the time of the song, now displays all songs excluding duplicates, and added a fail message to play again

--- a/Projects/guessthesong/guessthesong.html
+++ b/Projects/guessthesong/guessthesong.html
@@ -92,6 +92,13 @@
         </div>
     </div>
 
+    <div class="losingScreen" id="losingScreen">
+        <div class="losingScreen-inner">
+            <h2>You lose!</h2>
+            <b class="playAgain">Play again?</b>
+        </div>
+    </div>
+
     <canvas id="my-canvas"></canvas>
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
