--- a/Projects/guessthesong/guessthesong.html
+++ b/Projects/guessthesong/guessthesong.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="icon" href="data:,">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewpoint" content="width-device-width, initial-scale=1.0">
     <title>Guess The Song</title>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
     <img src="img/login-bg.jpg" alt="login image" class="login__img">
