--- a/Projects/guessthesong/guessthesong.html
+++ b/Projects/guessthesong/guessthesong.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewpoint" content="width-device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess The Song</title>
     <link rel="stylesheet" href="css/styles.css" />
 </head>
@@ -21,7 +21,6 @@
     </header>
     
     <div class="maincontainer">
-        
         <div class="headerContainer">
             <h1>Play a Random Song from my Playlist</h1>
             <div id="song-preview"></div>
@@ -33,11 +32,8 @@
                 <h2>How to play</h2>
                 <p>
                     <br>Listen to the song, a few seconds at a time.<br><br>
-
                     If you know the song, type it in and submit.<br><br>
-
                     If you need more information, click skip to play the next few seconds.<br><br>
-
                     Play again if your having fun!<br><br>
                 </p>
                 <button id="closeHelp">Close</button>
