Revert back to previous.
Reverted back to original.

--- a/Projects/guessthesong/guessthesong.html
+++ b/Projects/guessthesong/guessthesong.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guess The Song</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="data:,">
+    <title>Guess The Song</title>
 </head>
 <body>
     <img src="img/login-bg.jpg" alt="login image" class="login__img">
@@ -21,6 +22,7 @@
     </header>
     
     <div class="maincontainer">
+        
         <div class="headerContainer">
             <h1>Play a Random Song from my Playlist</h1>
             <div id="song-preview"></div>
@@ -32,8 +34,11 @@
                 <h2>How to play</h2>
                 <p>
                     <br>Listen to the song, a few seconds at a time.<br><br>
+
                     If you know the song, type it in and submit.<br><br>
+
                     If you need more information, click skip to play the next few seconds.<br><br>
+
                     Play again if your having fun!<br><br>
                 </p>
                 <button id="closeHelp">Close</button>
